# EWS

./: .gitignore  README.md
backend/: db_manager.py  pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/app/database/: create_mock_data.py  db.py  schema.py
backend/app/models/: background_data.pkl  best_b_xgb_model.pkl  nn_b_model.pkl  preprocessed.pkl  scaler.pkl
backend/app/scripts/: explainability.py  prediction.py  preprocess.py
backend/docs/: class_diagram.puml  class_diagram_generated.mmd  erd.puml  erd_generated.mmd
backend/models/: background_data.pkl  nn_b_model.pkl
backend/notebooks/: Student_at_risk_predictor.ipynb
backend/scripts/: generate_diagrams.py
docs/: README.md  class_diagram_backend.mmd  class_diagram_frontend.mmd  erd.mmd
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/forms/: FileUploadForm.tsx  PredictionForm.tsx  SimulationForm.tsx  StudentCreationForm.tsx  StudentSelector.tsx  index.ts
frontend/src/components/myui/: AppSidebar.tsx  CustomTable.tsx  EwsTable.tsx  FeatureImpactCard.tsx  (+10 more)
frontend/src/hooks/: useClient.ts
frontend/src/routes/: Routes.tsx
frontend/src/services/: README.md  index.ts  predictionApi.ts
frontend/src/test/: README.md  setup.ts
frontend/src/types/: batch.ts  index.ts  prediction.ts  student.ts  tab.ts
frontend/src/views/: AtRiskView.tsx  Home.tsx  HomeOverview.tsx  LandingPage.tsx  Layout.tsx  Login.tsx  Performance.tsx  Prediction.tsx  PrivacyPolicy.tsx  SignUp.tsx  Simulations.tsx  StudentsView.tsx
(+24 files in other folders)
