[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
]
